docs/original_moodle/unidades/entregas/todas/2/Tarea 11 - Máquina de Sandwich Reloaded/SIMARRA-1151896 NEIDER JOAN 2581/2019-09-22-21-52-46.ceg/compilation.txt
MaquinaSandwich.java:112: error: cannot find symbol
         if(CantidadQueso<15) throw new RuntimeException("Mensaje de Error");
            ^
  symbol:   variable CantidadQueso
  location: class MaquinaSandwich
MaquinaSandwich.java:151: error: incompatible types: int cannot be converted to boolean
         if(cantidadMortadela)  throw new RuntimeException("Mensaje de Error");
            ^
MaquinaSandwich.java:160: error: cannot find symbol
         if(cantidadanBlanco<3) throw new RuntimeException("Mensaje de Error");
            ^
  symbol:   variable cantidadanBlanco
  location: class MaquinaSandwich
3 errors
Not compiled
